<?php

namespace otavio\PooAeroportoPhp;

enum Cargo: string
{
    case PILOTO = "Piloto";
    case COPILOTO = "Co-piloto";
    case AEROMOCA = "Aeromoca";
}